Bug 1416728 - BETA: Process the CreateWindow reply message in order with other PContent IPC messages, r=bz a=gchang

MozReview-Commit-ID: 2Ul99aDgPsD